Fixed off centre game board on iPhone 5

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 body {
   font: 16px Roboto, sans-serif;
   text-align: center;
-  margin: 10px 20px;
-  min-width: 320px;
+  margin: 10px 10px;
+  min-width: 300px;
   background-color: rgb(61, 178, 255);
 }
 
